--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "test": "jest",
     "test:dev": "jest --watch --verbose",
     "pretty": "prettier --write '**/*.{js,json}'",
-    "lint": "eslint test routes services app.js",
+    "lint": "eslint test routes app.js",
     "precommit": "npm ls >/dev/null && lint-staged"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-deliver": "^1.0.0",
+    "lodash": "^4.17.20",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.13",
     "morgan": "~1.9.1",
