added payment model

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^5.11.13",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.7",
+    "pug": "^3.0.0",
     "save": "^2.4.0"
   }
 }
