added packages necessary to auth user

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ FRONT_URL=frontUrl
 
 MONGO_URI=mongodb_atlas_uri or mongodb://localhost/hackthatstartup
 PORT=8080
+
+// You can get a random Secret Key from https://www.grc.com/passwords.htm
+JWT_SECRET=
