--- a/package.json
+++ b/package.json
@@ -19,14 +19,20 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "debug": "~2.6.9",
+    "dns": "^0.2.2",
     "dotenv": "^8.2.0",
+    "email-validator": "^2.0.4",
     "express": "^4.16.4",
     "express-deliver": "^1.0.0",
+    "fs-extra": "^9.1.0",
     "jest": "^26.6.3",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.13",
     "morgan": "~1.9.1",
+    "nanoid": "^3.1.20",
+    "nodemailer": "^6.4.17",
     "nodemon": "^2.0.7",
     "save": "^2.4.0"
   }
