--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ PORT=8080
 
 // You can get a random Secret Key from https://www.grc.com/passwords.htm
 JWT_SECRET=
+
+// Social IDs
+GITHUB_CLIENTID=
+GITHUB_SECRETID=
