installed github oauth package

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.4",
     "express-deliver": "^1.0.0",
     "fs-extra": "^9.1.0",
+    "github-oauth-express": "^1.0.4",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
